tests/invalid_options_file/unterminated_var.options_file
# Unterminated variable references.
MCFLAGS-list += abc $(TYPE_SPEC_FLAGS
MCFLAGS-list += def$
